--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,56 @@
 	background-color: #f8f9fa;
 	color: black;
 }
+.accordion {
+    background-color: #f2f2f2;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    margin-bottom: 2px;
+}
+
+.active, .accordion:hover {
+    background-color: #d6d6d6;
+}
+
+.panel {
+    padding: 0 0 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#container {
+   min-height:100%;
+   position:relative;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+   font-family: "Segoe UI";
+   color: white;
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:40px;   /* Height of the footer */
+   background-color: #212529;
+}
+.btn.btn-secondary.status-btn-active {
+  background-color: #4a5056;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
