--- a/style/style.css
+++ b/style/style.css
@@ -7,33 +7,24 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
-.nav-link {
-	color:white;
+
+#accordionDiv{
+  margin-top: 1.5em;
 }
 
-.nav-link:hover {
-	color:white;
-}
-.nav-link.active {
-	background-color: none !important;
-}
-
-.dropdown-item:active {
-	background-color: #f8f9fa;
-	color: black;
-}
 .accordion {
     background-color: #f2f2f2;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding: 10px;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 1.2em;
     transition: 0.4s;
     margin-bottom: 2px;
+    border-radius: 5px;
 }
 
 .active, .accordion:hover {
@@ -41,7 +32,7 @@ body{
 }
 
 .panel {
-    padding: 0 0 0 18px;
+    padding: 0 0 0 28px;
     background-color: white;
     max-height: 0;
     overflow: hidden;
@@ -62,15 +53,7 @@ body {
    padding:10px;
    padding-bottom:60px;   /* Height of the footer */
 }
-#footer {
-   font-family: "Segoe UI";
-   color: white;
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:40px;   /* Height of the footer */
-   background-color: #212529;
-}
+
 .btn.btn-secondary.status-btn-active {
   background-color: #4a5056;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -152,12 +135,20 @@ ul.nav.navbar-nav li a:link {
 
 
 /*Add project and task buttons*/
-.add-task-btn{
-  background-color: #EBD89E;
-  color: #122752;
+.add-task-btn, .ditails-btn{
   font-weight: bold;
-  padding: 2px 5px;
-  margin: 3px;
+  padding: 4px 9px;
+  margin: 5px;
+  letter-spacing: .8px;
+  float: right;
+}
+.ditails-btn{
+  background-color: #30A98D;
+  color: white;
+}
+.add-task-btn{
+  background-color: #9C3436;
+  color: #EBD89E;
 }
 
 #add-project{
@@ -165,6 +156,16 @@ ul.nav.navbar-nav li a:link {
   color: #fff;
   letter-spacing: 1px;
   font-weight: bold;
+}
+
+#status-work-btn button{
+  background-color: #122752 !important;
+  color: white;
+}
+
+#status-work-btn button.status-btn-active{
+  background-color: #1c3c7d !important;
+  color: #EBD89E;
 }
 
 /* Modal */
@@ -176,4 +177,27 @@ ul.nav.navbar-nav li a:link {
 
 #add-task-submit, #add-project-submit{
   background-color: #30A98D;
+}
+
+
+/* Footer */
+#main-footer{
+  background-color: #122752;
+  color: white;
+  padding-top: 8px;
+   font-size: .9em;
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:40px;   /* Height of the footer */
+}
+
+#main-footer p{
+  text-align: center; 
+  margin: auto;
+  font-family:  'Black Ops One', cursive;
+}
+
+#mosquito-footer-logo{
+  height: 1.3em;
 }
